--- a/src/webui/locale/pt_BR/LC_MESSAGES/django.po
+++ b/src/webui/locale/pt_BR/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-11-16 06:04+0000\n"
+"POT-Creation-Date: 2010-11-16 21:53+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -184,7 +184,7 @@ msgstr "Contato"
 #: livemgr/controllers/conversations.py:198
 #: livemgr/templates/conversations/show.html:45
 msgid "Started in"
-msgstr "Inciciada em"
+msgstr "Iniciada em"
 
 #: livemgr/controllers/conversations.py:199
 #: livemgr/templates/conversations/show.html:46
